# bioinfo

./: .gitignore  file.txt  meson.build
samples/ApproxOccurences/: dataset_240221_3.txt  dataset_240221_4.txt  dataset_240221_6.txt  rosalind_ba1h.txt
samples/ClumpFinding/: dataset_240217_5(1).txt  dataset_240217_5.txt  rosalind_ba1e.txt
samples/ContigsFromReads/: rosalind_ba3k.txt
samples/DistanceBetweenPatternAndStrings/: rosalind_ba2h.txt
samples/EulerianPath/: rosalind_ba3g.txt
samples/FrequentWords/: dataset_240221_10.txt  dataset_240221_9.txt  rosalind_ba1j.txt
samples/GibbsSampler/: dataset_240245_4.txt  rosalind_ba2g.txt
samples/GreedyMotifSearchPseudocounts/: rosalind_ba2e.txt
samples/MinimumSkew/: rosalind_ba1f.txt
samples/PatternMatching/: rosalind_ba1d.txt
samples/PeptideEncoding/: rosalind_ba4b.txt
samples/ProfileMostProbableKmer/: rosalind_ba2c.txt
samples/RandomizedMotifSearch/: dataset_240243_5.txt  rosalind_ba2f.txt
src/: main.cpp
src/p1/: pattern_count.cpp  pattern_count.hpp
src/p10/: distance_between_pattern_and_strings.cpp  distance_between_pattern_and_strings.hpp
src/p11/: find_eulerian_path.cpp  find_eulerian_path.hpp
src/p12/: k_universal_string.cpp  k_universal_string.hpp
src/p13/: string_from_read_pairs.cpp  string_from_read_pairs.hpp
src/p14/: contigs_from_reads.cpp  contigs_from_reads.hpp
src/p16/: peptide_encoding.cpp  peptide_encoding.hpp
src/p17/: peptide_total_mass.cpp  peptide_total_mass.hpp
src/p2/: find_clumps.hpp  find_clums.cpp
src/p3/: minimum_skew.cpp  minimum_skew.hpp
(+15 files in other folders)
